--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "heroes-spa",
+  "name": "jornal-app",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.7",
+    "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -28,6 +29,7 @@
     "query-string": "^9.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
